fix: mobile header color flicker

--- a/src/components/Header/MobileNav/index.module.scss
+++ b/src/components/Header/MobileNav/index.module.scss
@@ -144,7 +144,7 @@
   display: none;
   visibility: hidden;
   position: relative;
-  background-color: var(--theme-bg);
+  background-color: transparent;
 
   ::-webkit-scrollbar {
     opacity: transparent;
